# homework/hw1/api.yaml
@@ -1,112 +1,87 @@
 paths:
-  /users:
-    get:
-      summary: Получить список пользователей
-      responses:
-        '200':
-          description: Успешный запрос
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/User'
-  /users/{id}:
-    get:
-      summary: Получить пользователя по ID
-      parameters:
-        - name: id
-          in: path
-          description: Идентификатор пользователя
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Успешный запрос
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-  /account:
-    get:
-      summary: Получить счет пользователя
-      responses:
-        '200':
-          description: Успешный запрос
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Account'
-  /models/{id}:
-    get:
-      summary: Загрузить ML-модель
-      parameters:
-        - name: id
-          in: path
-          description: Идентификатор модели
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Успешный запрос
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/MLModel'
-  /testing:
-    post:
-      summary: Тестировать модель на основе предоставленных данных
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/TestingData'
-      responses:
-        '200':
-          description: Успешно протестировано
   /register:
     post:
-      summary: Зарегистрировать нового пользователя
+      summary: "User registration"
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/RegisterRequest'
-      responses:
-        '201':
-          description: Пользователь успешно зарегистрирован
-  /login:
-    post:
-      summary: Аутентификация пользователя
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/LoginRequest'
+              type: object
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
+                name:
+                  type: string
+                surname:
+                  type: string
       responses:
         '200':
-          description: Успешная аутентификация
-  /predict:
+          description: "User registered successfully"
+  /token:
     post:
-      summary: Выполнить предсказание с использованием ML-модели
+      summary: "Get authentication token"
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                grant_type:
+                  type: string
+                username:
+                  type: string
+                password:
+                  type: string
+                scope:
+                  type: string
+      responses:
+        '200':
+          description: "Token obtained successfully"
+  /send_data:
+    post:
+      summary: "Send data for processing"
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PredictRequest'
+              type: object
+              properties:
+                data:
+                  type: string
       responses:
         '200':
-          description: Успешное предсказание
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PredictResponse'
+          description: "Data sent successfully"
+  /user/bill:
+    get:
+      summary: "Get user bill"
+      parameters:
+        - name: "Authorization"
+          in: "header"
+          description: "JWT token"
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: "User bill retrieved successfully"
+  /user/predict_rows:
+    get:
+      summary: "Get user prediction rows"
+      parameters:
+        - name: "Authorization"
+          in: "header"
+          description: "JWT token"
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: "User prediction rows retrieved successfully"
 components:
   schemas:
     User:
@@ -122,56 +97,58 @@ components:
           type: string
         surname:
           type: string
-    Account:
+    Bill:
       type: object
       properties:
         id:
           type: integer
-        userId:
+        User_id:
           type: integer
-        balance:
+        money:
           type: number
-    MLModel:
+    PredictRow:
       type: object
       properties:
         id:
           type: integer
-        name:
-          type: string
-        path:
-          type: string
-        description:
-          type: string
-    TestingData:
+        User_id:
+          type: integer
+        age_group:
+          type: integer
+        gender:
+          type: integer
+        sport_days:
+          type: integer
+        bmi:
+          type: float
+        glucose:
+          type: float
+        diabetes_degree:
+          type: float
+        hemoglobin:
+          type: float
+        insulin:
+          type: float
+        result:
+          type: float
+    InputData:
       type: object
       properties:
         data:
-          type: object
-    RegisterRequest:
+          model: int
+          age_group: int
+          RIAGENDR: float
+          PAQ605: float
+          BMXBMI: float
+          LBXGLU: float
+          DIQ010: float
+          LBXGLT: float
+          LBXIN: float
+    PersonalData:
       type: object
       properties:
-        username:
-          type: string
-        password:
-          type: string
-    LoginRequest:
-      type: object
-      properties:
-        username:
-          type: string
-        password:
-          type: string
-    PredictRequest:
-      type: object
-      properties:
-        modelId:
-          type: integer
-        input:
-          type: TestingData
-    PredictResponse:
-      type: object
-      properties:
-        predictedLabel:
-          type: integer
-        confidence:
-          type: number
+        data:
+          username: str
+          password: str
+          name: str
+          surname: str
